plugins {
    id 'com.android.library'
    id 'com.vanniktech.maven.publish'
}

android {
    compileSdk 31

    defaultConfig {
        minSdk 24
        targetSdk 31
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        consumerProguardFiles "consumer-rules.pro"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
}

dependencies {
    implementation 'androidx.appcompat:appcompat:1.4.1'
    implementation "com.squareup.okhttp3:okhttp:4.9.2"

    compileOnly 'io.github.yidun:quicklogin:3.1.1'
    compileOnly 'com.tencent.mm.opensdk:wechat-sdk-android:6.8.0'

    implementation 'cn.hutool:hutool-crypto:5.7.9'
    implementation 'org.bouncycastle:bcprov-jdk15to18:1.69'

    compileOnly files('libs/lib_wwapi-2.0.12.11.aar')
    compileOnly files('libs/alipaysdk.aar')
    compileOnly files ('libs/larksso-3.0.8.aar')
}
